// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`asi.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/facebook/flow/commit/78f657e8da014e16ff509ad34f8178b158c47af7
class C {
  foo
    () {}
}

=====================================output=====================================
// https://github.com/facebook/flow/commit/78f657e8da014e16ff509ad34f8178b158c47af7
class C {
  foo() {}
}

================================================================================
`;

exports[`assignment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
aaaaaaaa.bbbbbbbb.cccccccc.dddddddd.eeeeeeee.ffffffff.gggggggg2 = class extends (
  aaaaaaaa.bbbbbbbb.cccccccc.dddddddd.eeeeeeee.ffffffff.gggggggg1
) {
  method () {
    console.log("foo");
  }
};

foo = class extends bar {
  method() {
    console.log("foo");
  }
};

aaaaaaaa.bbbbbbbb.cccccccc.dddddddd.eeeeeeee.ffffffff.gggggggg2 = class extends bar {
  method() {
    console.log("foo");
  }
};

foo = class extends aaaaaaaa.bbbbbbbb.cccccccc.dddddddd.eeeeeeee.ffffffff.gggggggg2 {
  method() {
    console.log("foo");
  }
};

module.exports = class A extends B {
  method () {
    console.log("foo");
  }
};

=====================================output=====================================
aaaaaaaa.bbbbbbbb.cccccccc.dddddddd.eeeeeeee.ffffffff.gggggggg2 = class extends (
  aaaaaaaa.bbbbbbbb.cccccccc.dddddddd.eeeeeeee.ffffffff.gggggggg1
) {
  method() {
    console.log("foo");
  }
};

foo = class extends bar {
  method() {
    console.log("foo");
  }
};

aaaaaaaa.bbbbbbbb.cccccccc.dddddddd.eeeeeeee.ffffffff.gggggggg2 = class extends (
  bar
) {
  method() {
    console.log("foo");
  }
};

foo = class extends (
  aaaaaaaa.bbbbbbbb.cccccccc.dddddddd.eeeeeeee.ffffffff.gggggggg2
) {
  method() {
    console.log("foo");
  }
};

module.exports = class A extends B {
  method() {
    console.log("foo");
  }
};

================================================================================
`;

exports[`binary.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(class {}) + 1;
(class a {}) + 1;
(class extends b {}) + 1;
(class a extends b {}) + 1;

=====================================output=====================================
(class {}) + 1;
(class a {}) + 1;
(class extends b {}) + 1;
(class a extends b {}) + 1;

================================================================================
`;

exports[`call.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(class {})(class {});

=====================================output=====================================
(class {})(class {});

================================================================================
`;

exports[`class-fields-features.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  static epoch = new CustomDate(0);
  #xValue = 0;
  get #x() { return this.#xValue; }
  set #x(value) {
    this.#xValue = value;
    window.requestAnimationFrame(this.#render.bind(this));
  }
  #clicked() {
    this.#x++;
  }
  #render() {
    this.textContent = this.#x.toString();
  }
}

=====================================output=====================================
class Foo {
  static epoch = new CustomDate(0);
  #xValue = 0;
  get #x() { return this.#xValue; }
  set #x(value) {
    this.#xValue = value;
    window.requestAnimationFrame(this.#render.bind(this));
  }
  #clicked() {
    this.#x++;
  }
  #render() {
    this.textContent = this.#x.toString();
  }
}

================================================================================
`;

exports[`empty.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A1 {
  // comment
}

class A2 { // comment
}

class A3 {
}

class A4 {
  m() {}
}

=====================================output=====================================
class A1 {
  // comment
}

class A2 {
  // comment
}

class A3 {}

class A4 {
  m() {}
}

================================================================================
`;

exports[`getters-setters.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  set name(name) { this._name = name; }
  get name() { return this._name; }

  get model() { return super.model }
  get data() { return super.data }

  get [expr]() { return 'bar'; }
  set [expr](stuff) { return stuff; }

  get pageHeader() { return $('#pageHeader'); }
  get dialogHeader() { return $('#dialogHeader'); }
  get errorMessage() { return $('span.error-message'); }
  get addButtonDialog() { return $('#addButton'); }
  get yesDialogButton() { return $('#yesDialogButton'); }
  get noDialogButton() { return $('#noDialog'); }

  set value(v) { this.value$.next(v) }
  get value() { return this.value$.value }
}


class AstPath {
  constructor(value) {
    this.stack = [value];
  }

  /** @type {string | null} */
  get key() {
    const { stack, siblings } = this;
    return stack.at(siblings === null ? -2 : -4) ?? null;
  }

  /** @type {number | null} */
  get index() {
    return this.siblings === null ? null : this.stack.at(-2);
  }

  /** @type {object} */
  get node() {
    return this.stack.at(-1);
  }

  /** @type {object | null} */
  get parent() {
    return this.getNode(1);
  }

  /** @type {object | null} */
  get grandparent() {
    return this.getNode(2);
  }

  /** @type {boolean} */
  get isInArray() {
    return this.siblings !== null;
  }

  /** @type {object[] | null} */
  get siblings() {
    const { stack } = this;
    const maybeArray = stack.at(-3);
    return Array.isArray(maybeArray) ? maybeArray : null;
  }

  /** @type {object | null} */
  get next() {
    const { siblings } = this;
    return siblings === null ? null : siblings[this.index + 1];
  }

  /** @type {object | null} */
  get previous() {
    const { siblings } = this;
    return siblings === null ? null : siblings[this.index - 1];
  }

  /** @type {boolean} */
  get isFirst() {
    return this.index === 0;
  }

  /** @type {boolean} */
  get isLast() {
    const { siblings, index } = this;
    return siblings !== null && index === siblings.length - 1;
  }

  /** @type {boolean} */
  get isRoot() {
    return this.stack.length === 1;
  }

  /** @type {object} */
  get root() {
    return this.stack[0];
  }

  /** @type {object[]} */
  get ancestors() {
    return [...this.#getAncestors()];
  }

  #getAncestors() {
    // …
  }

}

=====================================output=====================================
class Foo {
  set name(name) { this._name = name; }
  get name() { return this._name; }

  get model() { return super.model; }
  get data() { return super.data; }

  get [expr]() { return "bar"; }
  set [expr](stuff) { return stuff; }

  get pageHeader() { return $("#pageHeader"); }
  get dialogHeader() { return $("#dialogHeader"); }
  get errorMessage() { return $("span.error-message"); }
  get addButtonDialog() { return $("#addButton"); }
  get yesDialogButton() { return $("#yesDialogButton"); }
  get noDialogButton() { return $("#noDialog"); }

  set value(v) { this.value$.next(v); }
  get value() { return this.value$.value; }
}

class AstPath {
  constructor(value) {
    this.stack = [value];
  }

  /** @type {string | null} */
  get key() {
    const { stack, siblings } = this;
    return stack.at(siblings === null ? -2 : -4) ?? null;
  }

  /** @type {number | null} */
  get index() { return this.siblings === null ? null : this.stack.at(-2); }

  /** @type {object} */
  get node() { return this.stack.at(-1); }

  /** @type {object | null} */
  get parent() { return this.getNode(1); }

  /** @type {object | null} */
  get grandparent() { return this.getNode(2); }

  /** @type {boolean} */
  get isInArray() { return this.siblings !== null; }

  /** @type {object[] | null} */
  get siblings() {
    const { stack } = this;
    const maybeArray = stack.at(-3);
    return Array.isArray(maybeArray) ? maybeArray : null;
  }

  /** @type {object | null} */
  get next() {
    const { siblings } = this;
    return siblings === null ? null : siblings[this.index + 1];
  }

  /** @type {object | null} */
  get previous() {
    const { siblings } = this;
    return siblings === null ? null : siblings[this.index - 1];
  }

  /** @type {boolean} */
  get isFirst() { return this.index === 0; }

  /** @type {boolean} */
  get isLast() {
    const { siblings, index } = this;
    return siblings !== null && index === siblings.length - 1;
  }

  /** @type {boolean} */
  get isRoot() { return this.stack.length === 1; }

  /** @type {object} */
  get root() { return this.stack[0]; }

  /** @type {object[]} */
  get ancestors() { return [...this.#getAncestors()]; }

  #getAncestors() {
    // …
  }
}

================================================================================
`;

exports[`member.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
(class {})[1];
(class {}).a;

=====================================output=====================================
(class {})[1];
(class {}).a;

================================================================================
`;

exports[`method.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

class C {
  name/*comment*/() {
  }
};


({
  name/*comment*/() {
  }
});

=====================================output=====================================
class C {
  name /*comment*/() {}
}

({
  name /*comment*/() {},
});

================================================================================
`;

exports[`new.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
new class {};
new Ctor(class {});

=====================================output=====================================
new (class {})();
new Ctor(class {});

================================================================================
`;

exports[`property.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A {
  foobar =
    // comment to break
    1 +
    // comment to break again
    2;
}

class B {
  someInstanceProperty = this.props.foofoofoofoofoofoo &&
    this.props.barbarbarbar;
  
  someInstanceProperty2 = { foo: this.props.foofoofoofoofoofoo &&
    this.props.barbarbarbar };
  
    someInstanceProperty3 =
  "foo";
}

=====================================output=====================================
class A {
  foobar =
    // comment to break
    1 +
    // comment to break again
    2;
}

class B {
  someInstanceProperty =
    this.props.foofoofoofoofoofoo && this.props.barbarbarbar;

  someInstanceProperty2 = {
    foo: this.props.foofoofoofoofoofoo && this.props.barbarbarbar,
  };

  someInstanceProperty3 = "foo";
}

================================================================================
`;

exports[`super.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class A extends B {
    #a() {
        super.x();
    }
}

=====================================output=====================================
class A extends B {
  #a() {
    super.x();
  }
}

================================================================================
`;

exports[`ternary.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
if (1) (class {}) ? 1 : 2;

=====================================output=====================================
if (1) (class {}) ? 1 : 2;

================================================================================
`;
